# zero2prod-axum

./: .gitignore  Cargo.toml  Readme.md  configuration.yaml
.github/workflows/: general.yml
migrations/: 20231115100457_create_subscriptions_table.sql
scripts/: init.ps1  init.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
