[package]
name = "zero2prod-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version =  "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dev-dependencies]
httpc-test = "0.1.7"
reqwest = "0.11.22"
