[package]
name = "zero2prod-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[dependencies]
axum = {version="0.6.20", features = ["tracing"]}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid ={version = "1.5.0", features = ["v4"]}
chrono = "0.4.31"
tower = {version = "0.4.13", features = ["full"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json","registry"] }
tower-http = { version = "0.4.4", features = ["trace"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version =  "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dev-dependencies]
httpc-test = "0.1.7"
reqwest = "0.11.22"
